# PoorMansAnubis

./: .gitmodules  CMakeLists.txt  README.txt  test.js
.github/: dependabot.yml
.github/workflows/: challenge_impl_unit_tests.yml  cxx_backend_unit_tests.yml
c_impl/: CMakeLists.txt  test.js
c_impl/src/: base64.c  base64.h  main.c  work.c  work.h
challenge_impl/: CMakeLists.txt  test.js
challenge_impl/src/: base64.c  base64.h  main.c  test.cc  work.c  work.h  work2.cc
cxx_html2/: .gitignore  CMakeLists.txt
cxx_html2/src/: constants.h  http2.cc  http2.h  main.cc
cxx_impl/: .gitignore  CMakeLists.txt  Makefile
cxx_impl/bundled/: .gitignore  CMakeLists.txt  Makefile  README.md  SHA256SUM_blake3_1.8.2.tar.gz.txt  SHA256SUM_blake3_1.8.3.tar.gz.txt  SHA256SUM_blake3_1.8.4.tar.gz.txt  SHA256SUM_blake3_1.8.5.tar.gz.txt  SHA256SUM_brotli-1.2.0.tar.gz.txt  SHA256SUM_curl-8.16.0.txt  SHA256SUM_curl-8.17.0.txt  SHA256SUM_curl-8.18.0.txt  SHA256SUM_curl-8.19.0.txt  SHA256SUM_curl-8.20.0.txt  SHA256SUM_curl-8.21.0.txt  SHA256SUM_idn2-2.3.8.tar.gz.txt  SHA256SUM_libunistring-1.4.1.tar.xz.txt  SHA256SUM_libunistring-1.4.2.tar.xz.txt  SHA256SUM_lz4_v1.10.0.tar.gz.txt  SHA256SUM_nghttp2-1.68.0.tar.xz.txt  SHA256SUM_nghttp2-1.68.1.tar.xz.txt  SHA256SUM_nghttp2-1.69.0.tar.xz.txt  SHA256SUM_openssl-3.6.0.tar.gz.txt  SHA256SUM_openssl-3.6.1.tar.gz.txt  SHA256SUM_openssl-3.6.2.tar.gz.txt  SHA256SUM_openssl-4.0.0.tar.gz.txt  SHA256SUM_openssl-4.0.1.tar.gz.txt  SHA256SUM_sqlite-3.51.0.txt  SHA256SUM_sqlite-3.51.1.txt  SHA256SUM_sqlite-3.51.2.txt  SHA256SUM_sqlite-3.51.3.txt  SHA256SUM_sqlite-3.52.0.txt  SHA256SUM_sqlite-3.53.0.txt  SHA256SUM_sqlite-3.53.1.txt  SHA256SUM_sqlite-3.53.2.txt  SHA256SUM_sqlite-3.53.3.txt  SHA256SUM_xz_v5.8.1.tar.gz.txt  SHA256SUM_xz_v5.8.2.tar.gz.txt  SHA256SUM_xz_v5.8.3.tar.gz.txt  SHA256SUM_zlib-1.3.1.tar.xz.txt  (+4 more)
cxx_impl/bundled/patches/: libunistring-1.4.1-fix-build.patch
cxx_impl/debug/: test_client.cc  test_serve.cc
cxx_impl/src/: args.cc  args.h  constants.cc  constants.h  db.cc  db.h  db_msql.cc  db_msql.h  db_msql_capi.cc  db_msql_capi.h  db_msql_capi_test.c  helpers.cc  helpers.h  http.cc  http.h  main.cc  poor_mans_print.cc  poor_mans_print.h  test.cc  thread_limit.cc  thread_limit.h  thread_pool.cc  thread_pool.h
rust_impl/: Cargo.toml  build.rs  clean.sh  cross_build_to_aarch64.sh  mysql.conf  sqlitedb
rust_impl/.helix/: languages.toml
rust_impl/msql_ffi/: Cargo.toml  build.rs  clean.sh
rust_impl/msql_ffi/src/: lib.rs
rust_impl/pma_salvo_proc_macro/: Cargo.toml
rust_impl/pma_salvo_proc_macro/src/: lib.rs
rust_impl/src/: args.rs  constants.rs  error.rs  ffi.rs  ffi_msql.rs  helpers.rs  json_types.rs  main.rs  salvo_compat.rs  signal.rs  sql_types.rs
src/: main.c  work.c  work.h
