[package]
name = "poor_mans_anubis_rust_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
salvo = { version = "0.79", features = ["affix-state"] }
tokio = { version = "1", features = ["fs"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
mysql_async = "0.36"
time = { version = "0.3", features = ["parsing", "local-offset", "formatting", "macros"] }
uuid = { version = "1.16", features = ["v5"] }
serde = "1"
serde_json = "1"
blake3 = "1.8"

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
