[package]
name = "poor_mans_anubis_rust_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
salvo = { version = "0.88", features = ["affix-state"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["native-tls-vendored"] }
mysql_async = { version = "0.36", optional = true }
time = { version = "0.3", features = ["parsing", "local-offset", "formatting", "macros"] }
serde = "1"
serde_json = "1"
blake3 = "1.8"
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
getrandom = "0.4"

[build-dependencies]
bindgen = "0.72"
cc = "1.2"

[features]
default = ["mysql"]
mysql = ["dep:mysql_async"]
sqlite = ["dep:rusqlite"]
