[package]
name = "poor_mans_anubis_rust_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
salvo = { version = "0.92", features = ["affix-state"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["native-tls-vendored"] }
time = { version = "0.3", features = ["parsing", "local-offset", "formatting", "macros"] }
serde = "1"
serde_json = "1"
blake3 = "1.8"
rusqlite = { version = "0.39", features = ["bundled"]}
getrandom = "0.4"
msql_ffi = { path = "msql_ffi" }

[build-dependencies]
bindgen = "0.72"
cc = "1.2"
